--- a/src/index.html
+++ b/src/index.html
@@ -28,7 +28,9 @@
       <!-- Карточки изображений -->
     </div>
 
-    <button type="button" class="load-more">Load more</button>
+    <div class="button-wrapper">
+      <button type="button" class="load-more">Load more</button>
+    </div>
 
     <script src="./index.js"></script>
   </body>
