fixed some problems with styles

--- a/src/index.html
+++ b/src/index.html
@@ -24,9 +24,11 @@
       <button class="search-form__button" type="submit">Search</button>
     </form>
 
-    <div class="gallery">
-      <!-- Карточки изображений -->
-    </div>
+    <section class="section">
+      <div class="gallery">
+        <!-- Карточки изображений -->
+      </div>
+    </section>
 
     <div class="button-wrapper">
       <button type="button" class="load-more">Load more</button>
