added some styles for buttons

--- a/src/index.html
+++ b/src/index.html
@@ -21,7 +21,9 @@
         autocomplete="off"
         placeholder="Search images..."
       />
-      <button class="search-form__button" type="submit">Search</button>
+      <div class="">
+        <button class="search-form__button" type="submit"><span></span>Search</button>
+      </div>
     </form>
 
     <section class="section">
@@ -31,7 +33,7 @@
     </section>
 
     <div class="button-wrapper">
-      <button type="button" class="load-more">Load more</button>
+      <button type="button" class="arrow-btn"><span></span>Load more</button>
     </div>
     <script src="./index.js"></script>
   </body>
